<resources>
    <string name="app_name">villamizar_villamizar</string>
    <string name="delete">Eliminar</string>
    <string name="txt_listado">Listado de productos</string>
    <string name="txt_detalle">Detalle producto</string>
    <string name="addp">Agregar producto</string>
    <string name="password">Contraseña</string>
    <string name="user">Correo electrónico</string>
    <string name="login">iniciar sesión</string>
    <string name="Log_in">LOGIN</string>
    <string name="form_nombre_prod">Nombre del producto</string>
    <string name="form_precio_prod">Precio del producto</string>
    <string name="form_url_prod">Url del producto</string>
    <string name="enviar_bd">registrar</string>
    <string name="inicio">Inicio</string>
    <string name="editar">Editar</string>
</resources>