<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".FormularioActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="172dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="172dp"
        android:background="@drawable/shape_form_activity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/et_form_nobre_producto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="56dp"
            android:background="@drawable/shape_edit_text"
            android:ems="10"
            android:hint="@string/form_nombre_prod"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_form_precio_producto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="56dp"
            android:background="@drawable/shape_edit_text"
            android:ems="10"
            android:hint="@string/form_precio_prod"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_form_nobre_producto" />

        <EditText
            android:id="@+id/et_form_url_producto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="56dp"
            android:background="@drawable/shape_edit_text"
            android:ems="10"
            android:hint="@string/form_url_prod"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_form_precio_producto" />

        <Button
            android:id="@+id/btn_form_send"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="56dp"
            android:layout_marginBottom="56dp"
            android:background="@drawable/shape_button"
            android:backgroundTint="@color/white"
            android:onClick="clickGuardar"
            android:text="@string/enviar_bd"
            android:textColor="@color/unab_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_form_url_producto" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>